# scrapers

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
scrapers/common/: pipelines.py
scrapers/olx/: requirements.txt  run_scraper.py  scrapy.cfg
scrapers/olx/olx/: items.py  olx_utils.py  pipelines.py  settings.py
scrapers/olx/olx/spiders/: olx_spider.py
scrapers/otodom/: run_scraper.py  scrapy.cfg
scrapers/otodom/otodom/: items.py  middlewares.py  otodom_utils.py  pipelines.py  settings.py
scrapers/otodom/otodom/spiders/: otodom_spider.py
