[tool.poetry]
name = "scrapers"
version = "0.1.0"
description = ""
authors = ["Radoslaw Jurczak <radoslaw.jurczak@student.uw.edu.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.11.0"
minio = "^7.2.3"
autopager = "0.3"
requests = "^2.31.0"
ujson = "^5.9.0"
pillow = "^10.2.0"
latest-user-agents = "^0.0.3"
boto3 = "^1.34.14"
ipython = "^8.19.0"
pandas = "^2.1.4"
pulsar-client = {version = "3.4.0", extras = ["all"]}
polars = "^0.20.3"
pyarrow = "^14.0.2"
deltalake = "^0.15.1"
scrapyd = "^1.4.3"
scrapyd-client = "^1.2.3"
logparser = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
